[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sounds/PickaxeFX/SlashFXpico1.mp3" type="AudioStream" id=1]
[ext_resource path="res://Scripts/Pico.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Armas/Rango_circulo.png" type="Texture2D" id=3]
[ext_resource path="res://Sounds/PickaxeFX/SlashFXpico3.mp3" type="AudioStream" id=4]
[ext_resource path="res://Sounds/PickaxeFX/SlashFXpico2.mp3" type="AudioStream" id=5]
[ext_resource path="res://Sounds/PickaxeFX/SlashFXpico4.mp3" type="AudioStream" id=6]
[ext_resource path="res://Sounds/PickaxeFX/SlashFXpico5.mp3" type="AudioStream" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 78.0064

[node name="Pico" type="Node2D"]
script = ExtResource( 2 )

[node name="Pivot" type="Node2D" parent="."]

[node name="Rango" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rango"]
shape = SubResource( 1 )

[node name="Sprite2D" type="Sprite2D" parent="Rango"]
scale = Vector2( 0.123047, 0.12207 )
texture = ExtResource( 3 )

[node name="Cooldown" type="Timer" parent="."]

[node name="Apuntar" type="Timer" parent="."]

[node name="SlashFXpico1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
volume_db = -5.0
bus = "FX"

[node name="SlashFXpico2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0
bus = "FX"

[node name="SlashFXpico3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
bus = "FX"

[node name="SlashFXpico4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0
bus = "FX"

[node name="SlashFXpico5" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0
bus = "FX"

[connection signal="body_entered" from="Rango" to="." method="_on_Rango_body_entered"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
